# turing-smart-screen-python

./: .gitignore  CONTRIBUTING.md  README.md  config.yaml  configure.py  main.py  pyproject.toml  requirements.txt  simple-program.py  theme-editor.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/icons/monitor-icon-17865/: AUTHOR.md
assets/themes/: README.md  default.yaml  themes.md
src/: __init__.py  config.py  display.py  log.py  scheduler.py  stats.py
src/lcd/: lcd_comm.py  lcd_comm_rev_a.py  lcd_comm_rev_b.py  lcd_comm_rev_c.py  lcd_comm_rev_d.py  lcd_simulated.py
src/sensors/: sensors.py  sensors_custom.py  sensors_librehardwaremonitor.py  sensors_python.py  sensors_stub_random.py  sensors_stub_static.py
tools/: compare-images.py  theme-preview-generator.py  turing-theme-extractor.py
