[tool.poetry]
name = "turing-smart-screen-remote"
version = "0.1.0"
description = ""
authors = ["Luiz Antonio Lazoti <luizlazoti@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
websockets = "^12.0"
pillow = ">=10.1.0,<10.2.0"
pyserial = ">=3.5,<4.0"
pyyaml = ">=6.0.1,<6.1.0"
psutil = ">=5.9.6,<5.10.0"
pystray = ">=0.19.5,<0.20.0"
babel = ">=2.13.1,<2.14.0"
ruamel-yaml = ">=0.18.5,<0.19.0"
sv-ttk = ">=2.5.5,<2.6.0"
pyadl = {version = ">=0.1,<1.0", platform = "win32"}
pywin32 = {version = ">=306", platform = "win32"}
pyamdgpuinfo = {version = ">=2.1.6,<2.2.0", platform = "linux"}
numpy = ">=1.26.0,<1.27.0"
gputil = {git = "https://github.com/mathoudebine/gputil.git", rev = "1.4.0-py3.12", python = ">=3.12"}
pythonnet = {version = ">=3.0.3,<3.1.0", platform = "win32"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

